--- a/store.html
+++ b/store.html
@@ -14,6 +14,7 @@
                     <li><a href="store.html">STORE</a></li>
                     <li><a href="about.html">ABOUT</a></li>
                 </ul>
+                <button class="cart-btn"> cart</button>
             </nav>
             <h1 class="band-name band-name-large">The Generics</h1>
         </header>
