--- a/store.html
+++ b/store.html
@@ -21,7 +21,7 @@
         <section class="container content-section">
             <h2 class="section-header">MUSIC</h2>
             <div class="shop-items">
-                <div class="shop-item">
+                <!-- <div class="shop-item">
                     <span class="shop-item-title">Album 1</span>
                     <img class="shop-item-image" src="Images/Album 1.png">
                     <div class="shop-item-details">
@@ -52,7 +52,7 @@
                         <span class="shop-item-price">$19.99</span>
                         <button class="btn btn-primary shop-item-button" type="button">ADD TO CART</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="container content-section">
